portfolio logic and setup

--- a/global.css
+++ b/global.css
@@ -17,6 +17,8 @@
   --backgound-clr-p: #101010;
   --backgound-clr-s: #4db5ff;
   --dark-slate: #495670;
+  --light-slate: #ccd6f6;
+  --slate: #8892b0;
   --clr-primary: #fff;
   --clr-secondary: #4db5ff;
   --clr-neutral: hsla(0, 0%, 100%, 0.05);
