--- a/portfolio.css
+++ b/portfolio.css
@@ -1,3 +1,6 @@
+#portfolio {
+  overflow-x: hidden;
+}
 /* HEADER SECTION */
 .header {
   position: fixed;
@@ -156,20 +159,20 @@
 
 .project-image .link-icon {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  top: 8px;
+  left: 8px;
+  right: 8px;
+  bottom: 8px;
   width: 100%;
   height: 100%;
-  opacity: 0;
-  visibility: hidden;
+  border: 3px solid var(--light-slate);
   transition: all 300ms ease-out;
-  background-color: var(--clr-secondary);
   cursor: pointer;
 }
 
 .link-icon img {
+  opacity: 0;
+  visibility: hidden;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -181,23 +184,23 @@
 }
 
 .project-image:hover .link-icon {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   opacity: 0.8;
-  visibility: visible;
+  border: none;
+  background: var(--clr-secondary);
 }
 
-/* .project.two {
-  height: 100vh;
-  background: red;
-} */
-
-.project.three {
-  height: 100vh;
-  background: green;
+.project-image:hover .link-icon img {
+  opacity: 1;
+  visibility: visible;
 }
 
 /* RESPONSIVE */
 /* large devices */
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 1200px) {
   .header {
     position: static;
     max-width: 1100px;
