--- a/home.css
+++ b/home.css
@@ -269,47 +269,76 @@ section > h2::after {
 }
 
 .skill-percent {
+  width: 100%;
+  background-color: var(--clr-neutral);
+  height: 1.8rem;
+  border-radius: 9px;
   margin-top: 0.2rem;
   position: relative;
-  width: 100%;
-  height: 1.8rem;
-  border-radius: 9px;
-  background-color: var(--clr-neutral);
   margin-bottom: 2.5rem;
 }
-.skill-percent:hover::before {
-  background-color: #4dc7ff;
-}
-.skill-percent::before {
-  content: "95%";
-  font-size: 14px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 95%;
-  height: 1.8rem;
-  background-color: var(--backgound-clr-s);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 9px;
-  transition: all 0.3s;
-}
-.skill-percent.two::before {
-  content: "90%";
+
+.skill-percent .skill-per {
+  position: relative;
+  display: block;
+  height: 100%;
   width: 90%;
+  border-radius: 9px;
+  background: var(--clr-secondary);
+  animation: progress 1s ease-in-out forwards;
 }
-.skill-percent.three::before {
-  content: "70%";
+
+.skill-percent .skill-per.bootstrap {
   width: 70%;
 }
-.skill-percent.four::before {
-  content: "65%";
+.skill-percent .skill-per.tailwind {
+  width: 60%;
+}
+.skill-percent .skill-per.javascript {
   width: 65%;
 }
-.skill-percent.five::before {
-  content: "40%";
+.skill-percent .skill-per.javascript {
+  width: 65%;
+}
+.skill-percent .skill-per.jQuery {
+  width: 55%;
+}
+.skill-percent .skill-per.react-type {
   width: 40%;
+}
+
+@keyframes progress {
+  0% {
+    width: 0;
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.skill-per .tooltip {
+  position: absolute;
+  right: -14px;
+  top: -32px;
+  font-size: 12px;
+  font-weight: 500;
+  padding: 2px 6px;
+  background-color: var(--clr-secondary);
+  color: var(--clr-primary);
+  border-radius: 3px;
+}
+
+.tooltip::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -2px;
+  height: 10px;
+  width: 10px;
+  background-color: var(--clr-secondary);
+  z-index: -1;
+  transform: translateX(-50%) rotate(45deg);
 }
 
 /* SERVICES SECTION */
