--- a/portfolio.css
+++ b/portfolio.css
@@ -185,7 +185,7 @@
   /* box-shadow: 0px 0px 12px var(--light-slate); */
   transition: 0.5s ease all;
   opacity: 0.5;
-  filter: blur(2px);
+  filter: blur(1px);
 }
 
 .project-image:hover .image {
@@ -233,6 +233,22 @@
 
   .project-image {
     margin-right: 0;
+  }
+
+  .project-image .image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transform: rotate(0deg) scale(1) translateY(10px);
+    transition: 0.5s ease all;
+    opacity: 0.5;
+    filter: blur(1px);
+  }
+
+  .project-image:hover .image {
+    opacity: 1;
+    filter: blur(0);
   }
 }
 
